--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,13 @@
 {
   "name": "angular-httphook",
   "main": "angular-httphook.js",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "authors": [
     "YanagiEiichi <admin@web-tinker.com>"
   ],
   "license": "MIT",
   "ignore": [
     "**/.*",
-    "demo"
+    "tests"
   ]
 }
